--- a/src/components/button/button.twig
+++ b/src/components/button/button.twig
@@ -1,11 +1,24 @@
-<button class="usa-button test {{ buttonClass }}">
-  {{ buttonText }}
-</button>
+{% if 'usa-button--outline usa-button--inverse' in modifier %}
+  <div class="bg-base-darkest padding-1" style="max-width: fit-content">
+{% endif %}
 
-{% if isDemo %}
-<div class="grid-container usa-section">
-  <div class="usa-prose">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus consequat nisi at dictum. Duis at scelerisque odio. Morbi rutrum, nibh sed rutrum maximus, est velit maximus libero, at accumsan dolor augue quis turpis. Aenean consectetur lobortis dolor mattis tincidunt. Suspendisse pretium, dolor id posuere porta, orci mauris consequat elit, in egestas quam turpis sit amet elit. Suspendisse placerat, lacus at ullamcorper commodo, tortor nulla molestie nunc, eget tincidunt sapien metus tincidunt arcu. Pellentesque facilisis urna ac purus viverra, ac condimentum ante pharetra. Ut diam quam, accumsan non urna sed, vulputate tempor velit. Quisque sit amet porta turpis, nec malesuada purus. Donec at imperdiet dui.</p>
+  {% if is_demo and 'usa-button--big' not in modifier %}
+    <button type="{{ type }}" class="usa-button {{ modifier }}">Default</button>
+    <button type="{{ type }}" class="usa-button {{ modifier }} usa-button--hover">Hover</button>
+    <button type="{{ type }}" class="usa-button {{ modifier }} usa-button--active">Active</button>
+    <button type="{{ type }}" class="usa-button {{ modifier }} usa-focus">Focus</button>
+    <button type="{{ type }}" class="usa-button {{ modifier }}" disabled>Disabled</button>
+    <button type="{{ type }}" class="usa-button {{ modifier }}" aria-disabled="true">aria-disabled</button>
+    <button type="{{ type }}" class="usa-button {{ modifier }} usa-button--unstyled">Unstyled button</button>
+  {% else %}
+    <button type="{{ type }}" class="usa-button {{ modifier }}">{{ text }}</button>
+    {% if is_demo and 'usa-button--big' in modifier %}
+      <button type="{{ type }}" class="usa-button {{ modifier }}" disabled>Disabled</button>
+      <button type="{{ type }}" class="usa-button {{ modifier }}" aria-disabled="true">aria-disabled</button>
+      <button type="{{ type }}" class="usa-button {{ modifier }} usa-button--unstyled">Unstyled button</button>
+    {% endif %}
+  {% endif %}
+
+{% if 'usa-button--outline usa-button--inverse' in modifier %}
   </div>
-</div>
 {% endif %}
