--- a/assets/scss/_uswds-theme.scss
+++ b/assets/scss/_uswds-theme.scss
@@ -21,7 +21,7 @@
   // Spacing
   $theme-column-gap-desktop: 6,
   $theme-grid-container-max-width: 'widescreen',
-  // $theme-site-margins-width: 2,
+  $theme-site-margins-width: 2,
   $theme-site-margins-mobile-width: 2,
   $theme-utility-breakpoints: (
     'mobile': true,
