Moved button to elements folder. Updated preview for elements

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,5 +12,5 @@
 // USWDS utilities
 @forward 'uswds-utilities';
 
-@use '../../src/components/' as *;
+@use '../../src/elements/' as *;
 @use '../../src/components/' as *;
