--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,5 +12,5 @@
 // USWDS utilities
 @forward 'uswds-utilities';
 
-@use '../../src/elements/' as *;
-@use '../../src/components/' as *;
+@use '../elements/' as *;
+@use '../components/' as *;
