--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 // Custom theme settings
-@forward './_uswds-theme';
+@forward 'uswds-theme';
 
 // USWDS core styles
 // @forward 'uswds'; // Remove comment to pull in all USWDS styles
